--- a/css/contact.css
+++ b/css/contact.css
@@ -69,16 +69,17 @@ header .welcome-title {
 }
 .image-container-contact {
     background: linear-gradient(to bottom right, #d6f5d6, #f5fdf7);
-    padding: 80px 10%;
+    padding: 40px 10%;
     text-align: center;
     position: relative;
     overflow: hidden;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .image-container-contact h1 {
-    margin-top: 30px;
+    margin-top: 0;
     font-weight: 800;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
 }
